--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 
 <body>
 
+    <!-- ========================================================================== -->
+    <nav>
+        <div class="container">
+            <h2 class="logo">Social App</h2>
+            <div class="search-bar">
+                <i class="uil uil-search"></i>
+                <input type="search" placeholder="Search for creators, inspirations & projects">
+            </div>
+            <div class="create">
+                <label class="btn btn-primary" for="create-post">Create</label>
+                <div class="profile-photo">
+                    <img src="assets/images/profile-1.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- ========================================================================== -->
+
     <script src="assets/js/script.js"></script>
 </body>
 
