--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     </nav>
     <!-- ========================================================================== -->
 
+    <!-- ========================================================================== -->
+    <main>
+        <div class="container">
+        </div>
+    </main>
+
     <script src="assets/js/script.js"></script>
 </body>
 
