--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- ========================================================================== -->
     <main>
         <div class="container">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
         </div>
     </main>
 
