--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
     <!-- ========================================================================== -->
     <main>
         <div class="container">
-            <div class="left"></div>
+            <div class="left">
+                <a href="" class="profile">
+                    <div class="profile-photo">
+                        <img src="assets/images/profile-1.jpg" alt="">
+                        <div class="active"></div>
+                    </div>
+                    <div class="handle">
+                        <h4>Iris West</h4>
+                        <p class="text-muted">@westallen</p>
+                    </div>
+                </a>
+            </div>
             <div class="middle"></div>
             <div class="right"></div>
         </div>
