--- a/index.html
+++ b/index.html
@@ -44,6 +44,88 @@
                         <p class="text-muted">@westallen</p>
                     </div>
                 </a>
+                <!-- ========================================================================== -->
+                <div class="sidebar">
+                    <a class="menu-item active">
+                        <span><i class="uil uil-home"></i></span>
+                        <h3>Home</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span><i class="uil uil-compass"></i></span>
+                        <h3>Explore</h3>
+                    </a>
+                    <a class="menu-item" id="notifications">
+                        <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
+                        <h3>Notifications</h3>
+                        <!-- NOTIFICATION POPUP -->
+                        <div class="notifications-popup">
+                            <div class="notification">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-2.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <h4>Iris West</h4>
+                                    <p>Hey there! I just wanted to let you know about...</p>
+                                    <small class="text-muted">2 hours ago</small>
+                                </div>
+                            </div>
+                            <div class="notification">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-3.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <h4>Iris West</h4>
+                                    <p>Hey there! I just wanted to let you know about...</p>
+                                    <small class="text-muted">2 hours ago</small>
+                                </div>
+                            </div>
+                            <div class="notification">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-4.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <h4>Iris West</h4>
+                                    <p>Hey there! I just wanted to let you know about...</p>
+                                    <small class="text-muted">2 hours ago</small>
+                                </div>
+                            </div>
+                            <div class="notification">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-5.jpg" alt="">
+                                </div>
+                                <div class="notification-body">
+                                    <h4>Iris West</h4>
+                                    <p>Hey there! I just wanted to let you know about...</p>
+                                    <small class="text-muted">2 hours ago</small>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="menu-item" id="messages-notifications">
+                        <span><i class="uil uil-envelope-alt"><small class="notification-count">7</small></i></span>
+                        <h3>Messages</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span><i class="uil uil-bookmark"></i></span>
+                        <h3>Bookmarks</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span><i class="uil uil-chart-line"></i></span>
+                        <h3>Analytics</h3>
+                    </a>
+                    <a class="menu-item" id="theme">
+                        <span><i class="uil uil-palette"></i></span>
+                        <h3>Theme</h3>
+                    </a>
+                    <a class="menu-item choose-color2" id="theme2">
+                        <span><i class="uil uil-palette"></i></span>
+                        <h3>Theme2</h3>
+                    </a>
+                    <a class="menu-item">
+                        <span><i class="uil uil-setting"></i></span>
+                        <h3>Settings</h3>
+                    </a>
+                </div>
             </div>
             <div class="middle"></div>
             <div class="right"></div>
