add a label for creating posts

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
                         <h3>Settings</h3>
                     </a>
                 </div>
+                <!-- ============================================== -->
+                <label for="create-post" class="btn btn-primary">Create Post</label>
             </div>
             <div class="middle"></div>
             <div class="right"></div>
