--- a/index.html
+++ b/index.html
@@ -129,7 +129,47 @@
                 <!-- ============================================== -->
                 <label for="create-post" class="btn btn-primary">Create Post</label>
             </div>
-            <div class="middle"></div>
+            <div class="middle">
+                <!-- STORIES -->
+                <div class="stories">
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-8.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-9.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-10.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-11.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-12.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-13.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+                </div>
+            </div>
             <div class="right"></div>
         </div>
     </main>
