--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
                         <p class="name">Your Story</p>
                     </div>
                 </div>
+
+                <!-- ============================ -->
+                <form action="" class="create-post">
+                    <div class="profile-photo">
+                        <img src="assets/images/profile-1.jpg" alt="">
+                    </div>
+                    <input type="text" placeholder="What's on your mind, Diana" id="create-post">
+                    <span><i class="uil uil-image-upload"></i></span>
+                    <input type="submit" value="Post" class="btn btn-primary">
+                </form>
             </div>
             <div class="right"></div>
         </div>
