--- a/index.html
+++ b/index.html
@@ -179,6 +179,295 @@
                     <span><i class="uil uil-image-upload"></i></span>
                     <input type="submit" value="Post" class="btn btn-primary">
                 </form>
+
+                <!-- ======================== FEEDS ======================== -->
+                <div class="feeds">
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-1.jpg" alt="">
+                                    <div class="active"></div>
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-1.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-4.jpg" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-7.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-6.jpg" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-3.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-7.jpg" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-4.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-8.jpg" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-5.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== FEED ======================== -->
+                    <div class="feed">
+                        <div class="head">
+                            <div class="user">
+                                <div class="profile-photo">
+                                    <img src="assets/images/profile-1.jpg" alt="">
+                                </div>
+                                <div class="info">
+                                    <h3>Iris West</h3>
+                                    <small>Dubai, 15 MINUTES AGO</small>
+                                </div>
+                            </div>
+                            <span class="edit">
+                                <i class="uil uil-ellipsis-h"></i>
+                            </span>
+                        </div>
+                        <!--  -->
+                        <div class="photo">
+                            <img src="assets/images/feed-6.jpg" alt="">
+                        </div>
+                        <!--  -->
+                        <div class="action-buttons">
+                            <div class="interaction-buttons">
+                                <span><i class="uil uil-heart"></i></span>
+                                <span><i class="uil uil-comment-dots"></i></span>
+                                <span><i class="uil uil-share-alt"></i></span>
+                            </div>
+                            <div class="bookmark">
+                                <span><i class="uil uil-bookmark-full"></i></span>
+                            </div>
+                        </div>
+                        <!--  -->
+                        <div class="liked-by">
+                            <span><img src="assets/images/profile-10.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-4.jpg" alt=""></span>
+                            <span><img src="assets/images/profile-15.jpg" alt=""></span>
+                            <p>Liked by <b>Iris West</b> and <b>323 others</b></p>
+                        </div>
+                        <!--  -->
+                        <div class="caption">
+                            <p>
+                                <b>Iris West</b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
+                                illum a esse dolor <span class="hash-tag">#lifestyle</span>
+                            </p>
+                        </div>
+                        <div class="comments text-muted">View all 277 comments</div>
+                    </div>
+                    <!-- ======================== END FEED ======================== -->
+                </div>
+                <!-- ======================== END FEEDS ======================== -->
             </div>
             <div class="right"></div>
         </div>
