--- a/index.html
+++ b/index.html
@@ -469,7 +469,151 @@
                 </div>
                 <!-- ======================== END FEEDS ======================== -->
             </div>
-            <div class="right"></div>
+
+            <!-- ========================================================================== -->
+            <div class="right">
+                <!-- MESSAGES -->
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages</h4><i class="uil uil-edit"></i>
+                    </div>
+                    <!-- SEARCH BAR -->
+                    <div class="search-bar">
+                        <i class="uil uil-search"></i>
+                        <input type="search" id="message-search" placeholder="Search messages">
+                    </div>
+                    <!-- MESSAGES CATEGORY -->
+                    <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <h6 class="message-requests">Requests(9)</h6>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-17.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>John Doe</h5>
+                            <p class="text-bold">Just woke up bruh!</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-9.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>Iris West</h5>
+                            <p class="text-bold">Just woke up bruh!</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-15.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Allan Doe</h5>
+                            <p class="text-muted">Just woke up bruh!</p>
+                        </div>
+                    </div>
+                    <!-- MESSAGE -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="assets/images/profile-19.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>John Doe</h5>
+                            <p class="text-muted">Just woke up bruh!</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- END MESSAGES -->
+
+                <!-- FRIEND REQUESTS -->
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <!-- REQUEST -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="assets/images/profile-17.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn ">Decline</button>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <!-- REQUEST -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="assets/images/profile-17.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn ">Decline</button>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <!-- REQUEST -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="assets/images/profile-17.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn ">Decline</button>
+                        </div>
+                    </div>
+                    <!--  -->
+                    <!-- REQUEST -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="assets/images/profile-17.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">Accept</button>
+                            <button class="btn ">Decline</button>
+                        </div>
+                    </div>
+                    <!--  -->
+                </div>
+            </div>
+            <!-- ========================================================================== -->
         </div>
     </main>
 
