--- a/index.html
+++ b/index.html
@@ -113,13 +113,9 @@
                         <span><i class="uil uil-chart-line"></i></span>
                         <h3>Analytics</h3>
                     </a>
-                    <a class="menu-item" id="theme">
+                    <a class="menu-item choose-color" id="theme">
                         <span><i class="uil uil-palette"></i></span>
                         <h3>Theme</h3>
-                    </a>
-                    <a class="menu-item choose-color2" id="theme2">
-                        <span><i class="uil uil-palette"></i></span>
-                        <h3>Theme2</h3>
                     </a>
                     <a class="menu-item">
                         <span><i class="uil uil-setting"></i></span>
