add a javascript functionality for theme toggle functionality

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </a>
                     <a class="menu-item choose-color" id="theme">
                         <span><i class="uil uil-palette"></i></span>
-                        <h3>Theme</h3>
+                        <h3>Theme (Light)</h3>
                     </a>
                     <a class="menu-item">
                         <span><i class="uil uil-setting"></i></span>
