add registration and login pages image folder and an auth css for login and registration

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="search" placeholder="Search for creators, inspirations & projects">
             </div>
             <div class="create">
-                <label class="btn btn-primary" for="create-post">Create</label>
+                <a href="login.html" class="btn btn-primary">Login</a>
                 <div class="profile-photo">
                     <img src="assets/images/profile-1.jpg" alt="">
                 </div>
