complete registration form by adding image field and add a config forlder

--- a/Register.html
+++ b/Register.html
@@ -24,6 +24,10 @@
                     <input type="text" name="lastname" id="lastname" placeholder="Enter your lastname">
                 </div>
                 <div class="form__control">
+                    <label for="username">User Name</label>
+                    <input type="text" name="username" id="username" placeholder="Enter your username">
+                </div>
+                <div class="form__control">
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" placeholder="Enter your email">
                 </div>
@@ -31,27 +35,30 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" placeholder="Enter your password">
                 </div>
-                <div class="sign-in__extras">
-                    <div>
-                        <input type="checkbox" name="remember" id="remember">
-                        <label for="remember">Remember me</label>
-                    </div>
-                    <a href="">Forgot Password?</a>
+                <div class="form__control">
+                    <label for="confirm_password">Confirm Password</label>
+                    <input type="confirm_password" name="confirm_password" id="confirm_password"
+                        placeholder="Confirm your password">
+                </div>
+                <!-- Image upload field -->
+                <div class="form__control">
+                    <label for="profile_image">Profile Image</label>
+                    <input type="file" name="profile_image" id="profile_image" accept="image/*">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Sign In</button>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
                 <button class="btn google">
                     <img src="./assets/image/google.png" alt="Google-Logo">
-                    <p>Sign in with Google</p>
+                    <p>Sign up with Google</p>
                 </button>
             </form>
-            <small class="next__page">Don't have an account? <a href="Register.html">Sign Up</a></small>
+            <small class="next__page">Already have an account? <a href="Register.html">Log In</a></small>
         </article>
-        <article class="sign-in__logo">
+        <!-- <article class="sign-in__logo">
             <div>
                 <img src="./assets//image/logo.png" alt="logo">
             </div>
-        </article>
+        </article> -->
     </section>
 </body>
 
