--- a/login.html
+++ b/login.html
@@ -39,11 +39,11 @@
             </form>
             <small class="next__page">Don't have an account? <a href="Register.html">Sign Up</a></small>
         </article>
-        <article class="sign-in__logo">
+        <!-- <article class="sign-in__logo">
             <div>
                 <img src="./assets//image/logo.png" alt="logo">
             </div>
-        </article>
+        </article> -->
     </section>
 </body>
 
